--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: LiinNs
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  怎么回事儿，我就想做个大牛，顺便把钱挣了。
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://liinns.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 
@@ -26,6 +24,9 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-sitemap
+  - jekyll-seo-tag
+  - jekyll-paginate
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
@@ -42,8 +43,18 @@ name: LiinNs's Blog
 author: LiinNs
 email: 876056609@qq.com
 #permalink: /:categories/:year/:month/:day/:title.html
-permalink: weblog/:title/
+permalink: posts/:title/
 kramdown:
   input: GFM
 highlighter: rouge
 host: 0.0.0.0
+paginate: 10
+paginate_path: "/page/:num/"
+excerpt_separator: <!--more-->
+
+defaults:
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "application"
