更新分页数

--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ kramdown:
   input: GFM
 highlighter: rouge
 host: 0.0.0.0
-paginate: 10
+paginate: 5
 paginate_path: "/page/:num/"
 excerpt_separator: <!-- more -->
 
@@ -56,5 +56,9 @@ defaults:
   - scope:
       path: ""
       type: "posts"
+    values:
+      layout: "application"
+  - scope:
+      path: ""
     values:
       layout: "application"
