更新帖子的交互

--- a/_config.yml
+++ b/_config.yml
@@ -57,3 +57,8 @@ defaults:
       path: ""
     values:
       layout: "application"
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
